[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "servco-helpers"
version = "0.1.1"
description = "Internal helper utilities for tech projects"
authors = [{ name = "Albie Ewins" }]
readme = "README.md"
license = { text = "Proprietary - All Rights Reserved" }
requires-python = ">=3.9"

# Dependencies your helpers need
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "google-cloud-storage>=2.16.0",
]

# Optional: nice metadata for documentation tools
keywords = ["helpers", "gcp", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AE-servco/servco-helpers"

[tool.setuptools.packages.find]
where = ["."]
include = ["servco_helpers*"]
